add css file, add styles css, fix html docs

--- a/Theory/Video_What_is_QA.html
+++ b/Theory/Video_What_is_QA.html
@@ -1,34 +1,61 @@
-<style>
-    .video-container {
-        text-align: center;
-        margin-bottom: 20px; 
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="video-container">
-    <h2 style="color: black;">What is QA testing</h2>
-    <a href="https://youtu.be/Dmif4bECuXY">
-        <img src="Video_player.png" alt="Відеоплеєр">
-    </a>
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/video_what_qa.css">
+    <title>Video What is QA?</title>
+</head>
 
-<div class="video-container">
-    <h2 style="color: black;">Testing objectives</h2>
-    <a href="https://youtu.be/eD2KlF5gCiI">
-        <img src="Video_player.png" alt="Відеоплеєр">
-    </a>
-</div>
+<body>
 
-<div class="video-container">
-    <h2 style="color: black;">Software Testing Life Cycle (STLC)</h2>
-    <a href="https://youtu.be/cBACmIUCAxk">
-        <img src="Video_player.png" alt="Відеоплеєр">
-    </a>
-</div>
+    <header>
+        <div>
+            <img src="../Emblema.png" alt="Емблема">
+        </div>
 
-<div class="video-container">
-    <h2 style="color: black;">6 quality characteristics</h2>
-    <a href="https://youtu.be/lhALuue3978">
-        <img src="Video_player.png" alt="Відеоплеєр">
-    </a>
-</div>
+        <div>
+            <a href="../Home.html">Home page</a>
+        </div>
+        </div>
+    </header>
+    <main>
+        <div class="video-container">
+            <h2>What is QA testing</h2>
+            <a href="https://youtu.be/Dmif4bECuXY">
+                <img src="../Image/Video_player.png" alt="Відеоплеєр">
+            </a>
+        </div>
+
+        <div class="video-container">
+            <h2>Testing objectives</h2>
+            <a href="https://youtu.be/eD2KlF5gCiI">
+                <img src="../Image/Video_player.png" alt="Відеоплеєр">
+            </a>
+        </div>
+
+        <div class="video-container">
+            <h2>Software Testing Life Cycle (STLC)</h2>
+            <a href="https://youtu.be/cBACmIUCAxk">
+                <img src="../Image/Video_player.png" alt="Відеоплеєр">
+            </a>
+        </div>
+
+        <div class="video-container">
+            <h2>6 quality characteristics</h2>
+            <a href="https://youtu.be/lhALuue3978">
+                <img src="../Image/Video_player.png" alt="Відеоплеєр">
+            </a>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 QA IT-Step</p>
+    </footer>
+
+</body>
+
+</html>
