--- a/Theory/Theory_What_is_QA.html
+++ b/Theory/Theory_What_is_QA.html
@@ -19,11 +19,10 @@
         </div>
 
         <div>
-            <a href="../Home.html">Home page</a>
+            <a href="../index.html">Home page</a>
         </div>
         </div>
     </header>
-
     <main>
         <div class="wrapper">
             <h2>1.Тестування програмного забезпечення</h2>
@@ -69,7 +68,7 @@
             цьому,
             відповідно до вимог гнучкої розробки ПЗ, програмування і тестування часто відбувається одночасно.
             </p>
-            <img src="../Image/" alt="6_Hapaktepuctuk">
+            <img src="../Image/testing &.bmp" alt="6_Hapaktepuctuk">
             <h2>2. Якість програмного забезпечення</h2>
             <p>Якість програмного забезпечення — характеристика програмного забезпечення,
                 ступінь
