--- a/Pages/interesting_information.html
+++ b/Pages/interesting_information.html
@@ -18,7 +18,7 @@
         </div>
 
         <div>
-            <a href="../Home.html">Home page</a>
+            <a href="../index.html">Home page</a>
         </div>
         </div>
     </header>
