add register page and new css styles

--- a/Pages/interesting_information.html
+++ b/Pages/interesting_information.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/inter_info.css">
     <title>Блоки тексту посередині сторінки</title>
 </head>
@@ -27,7 +28,7 @@
 
     <div class="container">
         <div class="block">
-            <h2><a href="UX design.html">Посібник з елементів інтерфейсу
+            <h2><a href="../Theory/UX design.html">Посібник з елементів інтерфейсу
                     користувача</a>
             </h2>
         </div>
