--- a/Pages/tech_check.html
+++ b/Pages/tech_check.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
-    <link rel="stylesheet" href="../css/select_page.css">
+    <link rel="stylesheet" href="../css/tech_check.css">
     <title>Testing Types</title>
-    
+
 </head>
 
 <body>
@@ -25,19 +25,7 @@
         </div>
     </header>
 
-    <h1>Testing Types</h1>
 
-
-    <nav>
-        <ul>
-            <li>
-                <a href="../Theory/Theory_Testing_Types.html">Theory</a>
-            </li>
-            <li>
-                <a href="../Theory/Video2_Testing_Type.html">Video</a>
-            </li>
-        </ul>
-    </nav>
 
     <footer>
         <p>&copy; 2024 QA IT-Step</p>
