--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
                 <ul>
                     <li><a href="./Pages/Сalendar.html" class="calendar-link">Календар подій</a>
                     </li>
-                    <li><a href="./Pages/Interesting_information.html" class="interesting-info">Цікава інформація</a>
+                    <li><a href="./Pages/interesting_information.html" class="interesting-info">Цікава інформація</a>
                     </li>
-                    <li><a href="#TestingTypes" class="tech-check">Тех-чек</a>
+                    <li><a href="./Pages/tech_check.html" class="tech-check">Тех-чек</a>
                     </li>
-                    <li><a href="#BugReports" class="interview">Співбесіда</a>
+                    <li><a href="./Pages/registration.html" class="interview">Реєстрація</a>
                     </li>
                     <li><a href="./Pages/Contacts.html" class="contacts">Контакти</a>
                     </li>
-                    <li><a href="#ChecklistAndDecomposition" class="news">Новини</a>
                 </ul>
             </nav>
         </div>
