--- a/Theory/Theory_Testing_Types.html
+++ b/Theory/Theory_Testing_Types.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/theory_test_types.css">
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/theory_page.css">
     <title>Theory Testing Types</title>
 </head>
 
