--- a/Theory/Theory_What_is_QA.html
+++ b/Theory/Theory_What_is_QA.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/theory_what_qa.css">
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/theory_page.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theory What is QA?</title>
 </head>
