--- a/Theory/Video2_Testing_Type.html
+++ b/Theory/Video2_Testing_Type.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/video_test_types.css">
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/video_page.css">
     <title>Video Testing Types</title>
 </head>
 
