--- a/Pages/Test_Design.html
+++ b/Pages/Test_Design.html
@@ -9,32 +9,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/select_page.css">
-    <title>What is QA?</title>
+    <title>Test Design</title>
 </head>
 
 <body>
 
     <header>
-        <div>
-            <img src="../Emblema.png" alt="Емблема">
-        </div>
+        <div class="nav">
+            <div>
+                <img src="../Emblema.png" alt="Емблема">
+            </div>
 
-        <div>
-            <a href="../index.html">Home page</a>
-        </div>
+            <div>
+                <a href="../index.html">Home page</a>
+            </div>
         </div>
     </header>
 
-    <h1>What is QA?</h1>
-
+    <h1>Test Design</h1>
 
     <nav>
         <ul>
             <li>
-                <a href="./Theory_What_is_QA.html">Theory</a>
+                <a href="../Theory/Theory_Test_Design.html">Theory</a>
             </li>
             <li style="display: inline-block;">
-                <a href="./Video_What_is_QA.html">Video</a>
+                <a href="../Theory/Video_Test_Design.html">Video</a>
             </li>
         </ul>
     </nav>
