--- a/Pages/tech_check.html
+++ b/Pages/tech_check.html
@@ -15,17 +15,36 @@
 
 <body>
     <header>
-        <div>
-            <img src="../Emblema.png" alt="Емблема">
-        </div>
+        <div class="nav">
+            <div>
+                <img src="../Emblema.png" alt="Емблема">
+            </div>
 
-        <div>
-            <a href="../index.html">Home page</a>
-        </div>
+            <div>
+                <a href="../index.html">Home page</a>
+            </div>
         </div>
     </header>
 
+    <h1>Тех-чек</h1>
+    <main class="wrapper">
 
+        <div class="test-block">
+            <h2>Пройди тест на знання теорії QA</h2>
+            <img src="../Image/quiz.jpg" alt="quiz" width="400px">
+            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+        </div>
+        <div class="test-block">
+            <h2>Пройди тест на знання теорії QA</h2>
+            <img src="../Image/quiz.jpg" alt="quiz" width="400px">
+            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+        </div>
+        <div class="test-block">
+            <h2>Пройди тест на знання теорії QA</h2>
+            <img src="../Image/quiz.jpg" alt="quiz" width="400px">
+            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+        </div>
+    </main>
 
     <footer>
         <p>&copy; 2024 QA IT-Step</p>
