--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./Pages/Сalendar.html" class="calendar-link">Календар подій</a>
+                    <li><a href="./Pages/calendar.html" class="calendar-link">Календар подій</a>
                     </li>
                     <li><a href="./Pages/interesting_information.html" class="interesting-info">Цікава інформація</a>
                     </li>
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="./Pages/registration.html" class="interview">Реєстрація</a>
                     </li>
-                    <li><a href="./Pages/Contacts.html" class="contacts">Контакти</a>
+                    <li><a href="./Pages/contacts.html" class="contacts">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -37,43 +37,48 @@
     <main class="">
         <section id="What is QA testing?">
             <h2>
-                <a href="./Theory/What_is_QA.html" class="page">What is QA testing?</a>
+                <a href="./Pages/What_is_QA.html" class="page">What is QA testing?</a>
             </h2>
             <!--  Testing Types -->
         </section>
 
         <section id="TestingTypes">
-            <h2><a href="./Theory/Testing_Types.html" class="page">Testing Types</a></h2>
+            <h2><a href=".//Pages/Testing_Types.html" class="page">Testing Types</a></h2>
 
-        </section>
-
-        <section id="BugReports">
-            <h2>Test Cases </h2>
-            <!-- Design Techniques  -->
         </section>
 
         <section id="TestCases">
-            <h2>Test Design Techniques </h2>
-            <!--  Test Cases -->
+            <h2><a href="./Pages/Test_Case.html" class="page">Test Cases</a></h2>
+        </section>
+
+        <section id="TestDesign">
+            <h2>
+                <a href="./Pages/Test_Design.html" class="page">Test Design Techniques</a>
+
+            </h2>
         </section>
 
         <section id="ChecklistAndDecomposition">
-            <h2>Checklist and Decomposition</h2>
+            <h2>
+                <a href="./Pages/Check_List.html" class="page">Checklist and Decomposition</a></h2>
             <!--  Checklist and Decomposition -->
         </section>
 
-        <section id="TestDesignTechniques">
-            <h2>Bug Reports</h2>
+        <section id="BugReports">
+            <h2>
+                <a href="./Pages/Bug_Report.html" class="page">Bug Reports</a></h2>
             <!-- Bug Reports  -->
         </section>
 
         <section id="SDLC">
-            <h2>Software Development Life Cycle</h2>
+            <h2>
+                <a href="./Pages/SDLC.html" class="page">Software Development Life Cycle</a></h2>
             <!--  Software Development Life Cycle -->
         </section>
 
         <section id="STLC">
-            <h2>Software Testing Life Cycle</h2>
+            <h2>
+                <a href="./Pages/STLC.html" class="page">Software Testing Life Cycle</a></h2>
             <!--  Software Testing Life Cycle -->
         </section>
 
@@ -92,6 +97,7 @@
             <!-- Content for TestRail & Jira -->
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 QA IT-Step</p>
     </footer>
