--- a/Pages/What_is_QA.html
+++ b/Pages/What_is_QA.html
@@ -9,32 +9,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/select_page.css">
-    <title>Testing Types</title>
-    
+    <title>What is QA?</title>
 </head>
 
 <body>
-    <header>
-        <div>
-            <img src="../Emblema.png" alt="Емблема">
-        </div>
 
-        <div>
-            <a href="../index.html">Home page</a>
-        </div>
+    <header>
+        <div class="nav">
+            <div>
+                <img src="../Emblema.png" alt="Емблема">
+            </div>
+    
+            <div>
+                <a href="../index.html">Home page</a>
+            </div>
         </div>
     </header>
 
-    <h1>Testing Types</h1>
+    <h1>What is QA?</h1>
 
 
     <nav>
         <ul>
             <li>
-                <a href="../Theory/Theory_Testing_Types.html">Theory</a>
+                <a href="../Theory/Theory_What_is_QA.html">Theory</a>
             </li>
-            <li>
-                <a href="../Theory/Video2_Testing_Type.html">Video</a>
+            <li style="display: inline-block;">
+                <a href="../Theory/Video_What_is_QA.html">Video</a>
             </li>
         </ul>
     </nav>
