--- a/Pages/registration.html
+++ b/Pages/registration.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <header>
+<header>
+    <div class="nav">
         <div>
             <img src="../Emblema.png" alt="Емблема">
         </div>
@@ -22,8 +23,8 @@
         <div>
             <a href="../index.html">Home page</a>
         </div>
-        </div>
-    </header>
+    </div>
+</header>
 
     <!-- REGISTER -->
     <div class="register">
