--- a/Theory/Theory_Testing_Types.html
+++ b/Theory/Theory_Testing_Types.html
@@ -15,13 +15,14 @@
 
 <body>
     <header>
-        <div>
-            <img src="../Emblema.png" alt="Емблема">
-        </div>
-
-        <div>
-            <a href="../index.html">Home page</a>
-        </div>
+        <div class="nav">
+            <div>
+                <img src="../Emblema.png" alt="Емблема">
+            </div>
+    
+            <div>
+                <a href="../index.html">Home page</a>
+            </div>
         </div>
     </header>
     <main>
