--- a/Theory/UX design.html
+++ b/Theory/UX design.html
@@ -3,47 +3,69 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/theory_page.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
+    <title>Theory What is QA?</title>
 </head>
 
 <body>
-    <H1>Стандартна термінологія інтерфейсу користувача: Умови дій</H1>
-    <img src="Image/owen.jpg" alt="">
+    <header>
+        <div class="nav">
+            <div>
+                <img src="../Emblema.png" alt="Емблема">
+            </div>
+
+            <div>
+                <a href="../index.html">Home page</a>
+            </div>
+        </div>
+    </header>
+    <main>
+    <h1>Стандартна термінологія інтерфейсу користувача: Умови дій</h1>
+    <img src="../Image/owen.jpg" alt="">
 
 
     <h2>Стандартна термінологія інтерфейсу користувача: терміни ідентифікатора</h2>
 
-    <img src="Image/two.jpg" alt="">
+    <img src="../Image/two.jpg" alt="">
 
     <h2>Загальні елементи введення</h2>
 
-    <img src="Image/thre.jpg" alt="">
-    <img src="Image/for.jpg" alt="">
-    <img src="Image/five.jpg" alt="">
-    <img src="Image/six.jpg" alt="">
+    <img src="../Image/thre.jpg" alt="">
+    <img src="../Image/for.jpg" alt="">
+    <img src="../Image/five.jpg" alt="">
+    <img src="../Image/six.jpg" alt="">
 
     <h2>Все про поля</h2>
-    <img src="Image/seven.jpg" alt="">
-    <img src="Image/nihht.jpg" alt="">
-    <img src="Image/devit.jpg" alt="">
+    <img src="../Image/seven.jpg" alt="">
+    <img src="../Image/nihht.jpg" alt="">
+    <img src="../Image/devit.jpg" alt="">
 
     <h2>Загальні вихідні елементи</h2>
 
-    <img src="Image/ten.jpg" alt="">
+    <img src="../Image/ten.jpg" alt="">
 
     <h2>Інші загальні елементи</h2>
-    <img src="Image/odini.jpg" alt="">
-    <img src="Image/kebab.jpg" alt="">
-    <img src="Image/panel.jpg" alt="">
-    <img src="Image/pidkazka.jpg" alt="">
-    <img src="Image/povzun.jpg" alt="">
-    <img src="Image/spoviweniy.jpg" alt="">
-    <img src="Image/tegi.jpg" alt="">
-    <img src="Image/forma.jpg" alt="">
-    <img src="Image/kartka.jpg" alt="">
-
-
+    <img src="../Image/odini.jpg" alt="">
+    <img src="../Image/kebab.jpg" alt="">
+    <img src="../Image/panel.jpg" alt="">
+    <img src="../Image/pidkazka.jpg" alt="">
+    <img src="../Image/povzun.jpg" alt="">
+    <img src="../Image/spoviweniy.jpg" alt="">
+    <img src="../Image/tegi.jpg" alt="">
+    <img src="../Image/forma.jpg" alt="">
+    <img src="../Image/kartka.jpg" alt="">
+    
+</main>
+<footer>
+    <p>&copy; 2024 QA IT-Step</p>
+</footer>
 </body>
 
 </html>
