--- a/Pages/interesting_information.html
+++ b/Pages/interesting_information.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/inter_info.css">
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
     <title>Блоки тексту посередині сторінки</title>
 </head>
 
@@ -34,7 +35,7 @@
             </h2>
         </div>
         <div class="block">
-            <h2><a href="">Другий блок тексту</a></h2>
+            <h2><a href="../Theory/Metodology_dev.html">Методології розробки ПЗ</a></h2>
         </div>
     </div>
 
