--- a/Theory/Theory_Bug_Report.html
+++ b/Theory/Theory_Bug_Report.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/theory_page.css">
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
     <title>Theory Bug Reports</title>
 </head>
 
