--- a/Theory/Theory_What_is_QA.html
+++ b/Theory/Theory_What_is_QA.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/theory_page.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
     <title>Theory What is QA?</title>
 </head>
 
