fix function js

--- a/Pages/calendar.html
+++ b/Pages/calendar.html
@@ -47,7 +47,7 @@
             </table>
             <input class="inputTofind" type="checkbox" name="my-checkbox" id="my-checkbox">
             <label for="my-checkbox">Піду</label>
-            <a href="https://dou.ua/calendar/50126/" id="my-link">Зареєструватись</a>
+            <a href="https://dou.ua/calendar/50126/" id="my-link" onclick="return false" target="_blank">Зареєструватись</a>
 
         </div>
 
