fix favicon, add modal info in calendar.html, add js function

--- a/Pages/STLC.html
+++ b/Pages/STLC.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
     <link rel="stylesheet" href="../css/select_page.css">
-    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../fav.png" type="image/x-icon">
     <title>STLC</title>
 </head>
 
