fix register form

--- a/Pages/registration.html
+++ b/Pages/registration.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
-    <link rel="stylesheet" href="../css/registration.css">
+    <link rel="stylesheet" href="../css/form.css">
     <link rel="shortcut icon" href="../fav.png" type="image/x-icon">
     <title>Testing Types</title>
 
@@ -28,29 +28,16 @@
 </header>
 
     <!-- REGISTER -->
-    <div class="register">
-        <div class="register-block">
-            <h3>Register</h3>
+    <div class="container">
+            <h1>Register</h1>
+        <form>
+            <input type="text" name="name" placeholder="Ваше ім'я" required>
+            <input type="text" name="name" placeholder="Ваше прізвище" required>
+            <input type="email" name="email" placeholder="Ваша електронна пошта" required>
+            <input type="password" name="password" placeholder="Ваш пароль" required>
 
-            <div class="input-block">
-                <div class="input">
-                    <h4>First name</h4>
-                    <input type="text" id="first-name" required>
-
-                    <h4>Last name</h4>
-                    <input type="text" id="last-name" required>
-
-                    <h4>E-mail</h4>
-                    <input type="text" id="email" required>
-
-                    <h4>Password</h4>
-                    <input type="password" id="password" minlength="8" required>
-                </div>
-
-                <button class="register-signup-btn">Sign Up</button>
-
-            </div>
-        </div>
+            <input type="submit" value="Відправити"> <a href="Home.html"></a>
+        </form>
     </div>
 
     <footer>
