--- a/Pages/Contacts.html
+++ b/Pages/Contacts.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/header_footer.css">
-    <link rel="stylesheet" href="../css/contacts.css">
+    <link rel="stylesheet" href="../css/form.css">
     <link rel="shortcut icon" href="../fav.png" type="image/x-icon">
     <title>Контакти</title>
 </head>
